logo and dark mode

--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,3 +1,7 @@
+<div class="jollof-logo-container">
+  <img class="jollof-logo" src="../../../assets/jollof.jpg" />
+</div>
+
 <div class="signin-container">
   <ion-button
     expand="full"
