--- a/src/global.scss
+++ b/src/global.scss
@@ -36,6 +36,10 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
 
+iframe {
+  color-scheme: light;
+}
+
 body {
   background: black;
 }
