--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -7,18 +7,18 @@
     expand="full"
     shape="round"
     *ngIf="!user.currentUser || !user.currentUser.email"
-    color="dark"
+    color="light"
     style="width: 100%"
     (click)="SignInGoogle()"
   >
-    <ion-icon [src]="'../../assets/google-logo.svg'" slot="start"></ion-icon
-    >&nbsp; Continue With Google
+    <ion-icon name="logo-google" slot="start"></ion-icon>&nbsp; Continue With
+    Google
   </ion-button>
   <ion-button
     expand="full"
     shape="round"
     *ngIf="!user.currentUser || !user.currentUser.email"
-    color="dark"
+    color="light"
     style="width: 100%"
     (click)="SignInFB()"
   >
