--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,5 +11,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Settings"></app-explore-container>
+  <ion-button (click)="user.SignOut()"> Logout </ion-button>
 </ion-content>
