--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -7,7 +7,7 @@
     expand="full"
     shape="round"
     *ngIf="!user.currentUser || !user.currentUser.email"
-    color="light"
+    color="dark"
     style="width: 100%"
     (click)="SignInGoogle()"
   >
@@ -18,7 +18,7 @@
     expand="full"
     shape="round"
     *ngIf="!user.currentUser || !user.currentUser.email"
-    color="light"
+    color="dark"
     style="width: 100%"
     (click)="SignInFB()"
   >
