--- a/src/global.scss
+++ b/src/global.scss
@@ -43,3 +43,21 @@ iframe {
 body {
   background: black;
 }
+
+.jollof-logo-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.jollof-logo {
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+  padding: 10px;
+}
