--- a/src/global.scss
+++ b/src/global.scss
@@ -48,7 +48,7 @@ body {
   position: absolute;
   left: 0;
   right: 0;
-  top: 0;
+  top: 50px;
   margin: auto;
   display: flex;
   justify-content: center;
