--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -21,7 +21,7 @@
       *ngIf="!user.currentUser || !user.currentUser.email"
       color="dark"
       style="width: 100%"
-      (click)="SignInFB()"
+      (click)="SignInFacebook()"
     >
       <ion-icon
         style="color: #4267b2"
