--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,5 +11,24 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-button (click)="user.SignOut()"> Logout </ion-button>
+  <ion-list>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="airplane" slot="start"></ion-icon>
+      <ion-label>Airplane Mode</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="wifi" slot="start"></ion-icon>
+      <ion-label>Wi-Fi</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="bluetooth" slot="start"></ion-icon>
+      <ion-label>Bluetooth</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="call" slot="start"></ion-icon>
+      <ion-label>Cellular</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-button class="logout-button" (click)="user.SignOut()"> Logout </ion-button>
 </ion-content>
