--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,34 +1,28 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title> Settings </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Settings</ion-title>
+      <ion-title>Settings</ion-title>
+      <ion-buttons *ngIf="pendingChanges" slot="end">
+        <ion-button> Save </ion-button>
+      </ion-buttons>
     </ion-toolbar>
   </ion-header>
 
-  <ion-list>
-    <ion-item>
-      <ion-icon aria-hidden="true" name="airplane" slot="start"></ion-icon>
-      <ion-label>Airplane Mode</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" name="wifi" slot="start"></ion-icon>
-      <ion-label>Wi-Fi</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" name="bluetooth" slot="start"></ion-icon>
-      <ion-label>Bluetooth</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-icon aria-hidden="true" name="call" slot="start"></ion-icon>
-      <ion-label>Cellular</ion-label>
-    </ion-item>
-  </ion-list>
+  <br />
+  <br />
 
-  <ion-button class="logout-button" (click)="user.SignOut()"> Logout </ion-button>
+  <div class="pfp-wrapper">
+    <ion-avatar slot="start">
+      <img
+        alt="Silhouette of a person's head"
+        src="https://ionicframework.com/docs/img/demos/avatar.svg"
+      />
+    </ion-avatar>
+    <ion-button size="small" fill="clear">Edit</ion-button>
+  </div>
+
+  <app-profile
+    [value]="pendingProfile"
+    (profileChanged)="profileChanged($event)"
+  ></app-profile>
 </ion-content>
