--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,12 +1,12 @@
 <ion-list [inset]="true">
-  <ion-item>
+  <ion-item color="light">
     <ion-input
       [(ngModel)]="profile.firstName"
       (ngModelChange)="firstNameChanged($event)"
       label="First Name"
     ></ion-input>
   </ion-item>
-  <ion-item>
+  <ion-item color="light">
     <ion-input
       [(ngModel)]="profile.lastName"
       (ngModelChange)="lastNameChanged($event)"
@@ -14,19 +14,19 @@
     ></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item color="light">
     <app-country-tel-list
       (countryChanged)="phoneNumberCountryChanged($event)"
       (phoneNumberChangedCallback)="phoneNumberChanged($event)"
     ></app-country-tel-list>
   </ion-item>
 
-  <ion-item>
+  <ion-item color="light">
     <ion-label>Birthdate</ion-label>
     <ion-datetime-button datetime="datetime"></ion-datetime-button>
   </ion-item>
 
-  <ion-item>
+  <ion-item color="light">
     <ion-button fill="clear" id="country-modal-trigger">{{
       profile.country.countryNameEn
     }}</ion-button>
