--- a/src/global.scss
+++ b/src/global.scss
@@ -65,3 +65,14 @@ body {
 div.ion-delegate-host.popover-viewport {
   overflow: hidden;
 }
+
+// ion-content::part(background) {
+//   background-image: url("./assets/background.png");
+//   background-position: center;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+// }
+
+.heading-text {
+  font-size: xx-large;
+}
