--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -16,14 +16,20 @@
     method="post"
     enctype="multipart/form-data"
   >
-    <input (change)="fileChanged($event)" #fileUpload type="file" name="image" accept="image/*" />
+    <input
+      (change)="fileChanged($event)"
+      #fileUpload
+      type="file"
+      name="image"
+      accept="image/*"
+    />
   </form>
 
   <div class="pfp-wrapper">
-    <ion-avatar slot="start">
+    <ion-avatar style="width: 100px; height: 100px" slot="start">
       <img
         alt="Silhouette of a person's head"
-        src="https://ionicframework.com/docs/img/demos/avatar.svg"
+        [src]="user.currentUser?.profilePhotoUrl || 'https://ionicframework.com/docs/img/demos/avatar.svg'"
       />
     </ion-avatar>
     <ion-button
